--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "bilibili-live-ws": "^6.2.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "query-string": "^7.1.1"
   }
 }
